--- a/ng-meteor.html
+++ b/ng-meteor.html
@@ -1,14 +1,7 @@
 <head>
-  <title>ng-meteor</title>
+    <title>Ng Meteor</title>
 </head>
 
-<body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
+<body ng-app="ng-meteor" ng-controller="NgMeteorController as ngMeteor">
+<div ng-include="'todo-list.ng.html'"></div>
 </body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
